# cmake_empty

./: .gitignore  CMakeLists.txt  Dockerfile  README.md  build.sh
cmake/: CompilerOptions.cmake
docker/archlinux.clang-tidy/: Dockerfile
docker/archlinux.clang-ubsan/: Dockerfile
docker/archlinux.clang-valgrind/: Dockerfile
docker/archlinux.emscripten/: Dockerfile
docker/debian.emscripten/: Dockerfile
docker/ubuntu.gcc/: Dockerfile
scripts/building/: build_all.sh
scripts/building/platform/: emscripten.sh  unix.sh
src/app/: CMakeLists.txt
src/app/src/: main.cpp  matcher.cpp  matcher.h  test.cpp
